chore(checkout): adjust shipping rates to POST
