# docs/swagger.json
@@ -2123,11 +2123,14 @@
             }
         },
         "/shipping/rates": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
+                ],
+                "consumes": [
+                    "application/json"
                 ],
                 "produces": [
                     "application/json"
@@ -2138,17 +2141,13 @@
                 "summary": "List live shipping rates via ShipStation",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Destination ZIP",
-                        "name": "zip",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Destination Country (default: US)",
-                        "name": "country",
-                        "in": "query"
+                        "description": "Shipping Rates Request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/checkout.ShippingRatesRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -2663,6 +2662,36 @@
                     "type": "string"
                 },
                 "service_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "checkout.ShippingRatesRequest": {
+            "type": "object",
+            "required": [
+                "country",
+                "zip"
+            ],
+            "properties": {
+                "address1": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "country": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "zip": {
                     "type": "string"
                 }
             }
